# De-Novo-LLM

./: .gitignore  De-Novo-LLM.txt  README.md  RUN.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
configs/: biomistral_7b.yaml  mol_flow.yaml  mol_flow_smoke.yaml  molecule_benchmark.yaml  nucleic_acid.yaml  progen2_protein.yaml  protein.yaml  small_molecule.yaml  smoke.yaml  smoke_local.yaml
data/samples/: dna_sample.txt  protein_sample.txt  smiles_sample.txt
docs/: MODELS.md  index.html
docs/results/: benchmark.json
results/: closed_loop.json  conditioning.json
scripts/: benchmark.py  closed_loop_demo.py  download_data.py  download_smiles.py  make_figures.py  make_tiny_local_model.py  property_conditioning.py  quickstart.sh
src/denovo/: __init__.py  cli.py  condition.py  config.py  data.py  evaluate.py  generate.py  modalities.py  model.py  nim.py  optimize.py  properties.py  scaffold.py  train.py
src/denovo/closedloop/: __init__.py  acquisition.py  featurize.py  loop.py  oracle.py  surrogate.py
src/denovo/structure/: __init__.py  chem.py  cli.py  config.py  data.py  egnn.py  evaluate.py  flow.py  model.py  sample.py  train.py
tests/: test_closedloop.py  test_config.py  test_modalities.py  test_nim.py  test_properties.py  test_scaffold.py  test_structure.py
